#591 - Use StandardCharsets